Fixed the button URL

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="buffer col-12"></div>
           <section class="text-center col-12">
             <hr>
-            <a href="form-page.html">
+            <a href="https://mailchi.mp/d392d65f8a3a/zero-to-mastery_startuppage">
               <button class="btn btn-primary btn-xl">Find out more</button>
             </a>
           </section>
